--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="resources/css/style.css">
+</head>
+<body>
+    <main>
+        <section>
+            <h1>Discover hidden places in the world around you</h1>
+            <p><a href="#">Download Excursion (Coming soon!)</a></p>
+        </section>
+        <section>
+            
+        </section>
+    </main> 
+</body>
+</html>
