--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
 </head>
 <body>
     <main>
-        <section>
+        <header>
             <h1>Discover hidden places in the world around you</h1>
             <p><a href="#">Download Excursion (Coming soon!)</a></p>
+            <video src="resources/videos/excursion.mp4" autoplay loop muted></video>
+        </header>
+        <section>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <p>
+                <img src="resources/images/camp.jpg" alt="several tents at a campground under the stars">
+            </p>
+           <p>
+                <img src="resources/images/phone.png" alt="phone icon">
+           </p>
         </section>
         <section>
-            
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p><a href="#">Download Excursion (Coming soon!)</a></p>
         </section>
     </main> 
+    <footer>
+        <p><small>&copy; Excursion</small></p>
+    </footer>
 </body>
 </html>
