--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Excursion Travel</title>
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
             <p><a href="#">Download Excursion (Coming soon!)</a></p>
             <video src="resources/videos/excursion.mp4" autoplay loop muted></video>
         </header>
-        <section>
+        <section class="travel">
             <h2>Your personal travel guide</h2>
-            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <p> Excursion remembers places you like, and recommends new points of interest around you.</p>
             <p>
                 <img src="resources/images/camp.jpg" alt="several tents at a campground under the stars">
             </p>
@@ -29,7 +29,7 @@
         </section>
     </main> 
     <footer>
-        <p><small>&copy; Excursion</small></p>
+        <p>&copy; Excursion</p>
     </footer>
 </body>
 </html>
